# metabuild

./: .env  .env.local  .gitignore  LICENSE  README.md
client/: build.sh
client/frontend/: App.js  babel.config.js  e2ee_worker.js  global.scss  index.html  index.js  package.json  start.sh
client/frontend/hooks/: useBreakpoints.js  useMediaConstraints.js
client/frontend/stores/: appStore.js
client/src/: go.mod  go.sum  main.go
contract/: Cargo.toml  README.md  build.sh  deploy.sh  deploy_prod.sh
contract/src/: call.rs  client.rs  lib.rs  node.rs
frontend/: .parcelrc  .postcssrc  App.js  config.js  global.scss  index.html  index.js  package.json  start.sh  start_local.sh
frontend/assets/icons/: index.js
frontend/assets/images/: index.js
frontend/components/BalanceForm/: BalanceForm.js  BalanceForm.module.scss
frontend/components/Button/: Button.module.scss
frontend/components/Card/: Card.js  Card.module.scss
frontend/components/ConnectWalletButton/: ConnectWalletButton.js  ConnectWalletButton.module.scss
frontend/components/Container/: Container.js  Container.module.scss
frontend/components/Guide/: Guide.js  Guide.module.scss
frontend/components/Header/: Header.js  Header.module.scss
frontend/components/Input/: Input.js  Input.module.scss
frontend/components/NodeForm/: NodeForm.js  NodeForm.module.scss
frontend/components/ProfileBadge/: ProfileBadge.js  ProfileBadge.module.scss
frontend/pages/CustomerDashboard/: CustomerDashboard.js  CustomerDashboard.module.scss
frontend/stores/: appStore.js
sfu/src/: go.mod  go.sum  main.go
(+31 files in other folders)
