[package]
name = "contract"
version = "1.0.0"
authors = ["dtel labs ltd <vadim@dtelecom.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "^0.4"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
